// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Images block  Check mix 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  <h6>title <em>1</em></h6>

  <p>description 2</p>

</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  <p>description 3</p>

</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
</div>
"
`;

exports[`Images block  Check pattern full 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block__data-undefined mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  <h6>title <em>1</em></h6>

  <p>description 2</p>

</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  <p>description 3</p>

</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  <h4>title <em>4</em></h4>

  <p>description 4</p>

</div>
<!-- end mdc-image --> 
    
</div>
"
`;

exports[`Images block  Check pattern img description 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  <p>description 1</p>

</div>
<!-- end mdc-image --> 
    

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  <p>description 2</p>

</div>
<!-- end mdc-image --> 
    
</div>
"
`;

exports[`Images block  Check pattern img only 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block__data-undefined mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
</div>
"
`;

exports[`Images block  Check pattern img title 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  <h3>title 111</h3>

  
</div>
<!-- end mdc-image --> 
    

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  <h2>title 222</h2>

  
</div>
<!-- end mdc-image --> 
    
</div>
"
`;

exports[`Images block  Check wrong component 1`] = `
"

<div class=\\"mdc-images-block__smrow-3 mdc-images-block__mdrow-3 mdc-images-block__lgrow-3 mdc-images-block\\">

<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    # title <em>1</em>
description 2
description 2


<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  <p>description 3</p>

</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
<!-- mdc-image -->
<div class=\\"mdc-image-block\\">
  <img alt=\\"картинка center\\" src=\\"https://www.letu.ru/common/img/banners/gomobile_apr22_3320.jpg\\" />
  
  
</div>
<!-- end mdc-image --> 
    
</div>
"
`;
